# clawdmeter-wrs

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  flash-mac.sh  flash.sh  install-mac.sh  install-windows.ps1  install.sh  package-lock.json  screenshot.sh
.github/workflows/: release-companion.yml
companion/: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
companion/src/: App.tsx  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: README.md  icon.icns
companion/src-tauri/macos/: Info.plist  entitlements.plist
companion/src-tauri/src/: ble_scan.rs  crash.rs  daemon_proc.rs  flash.rs  ipc.rs  lib.rs  main.rs  ports.rs  service.rs  tray.rs  updater.rs
daemon/: claude_usage_daemon.py  clawdmeter-daemon.service  clawdmeter_daemon.py  com.clawdmeter.daemon.plist
daemon/clawdmeter_daemon/: __init__.py  ble.py  cli.py  config.py  ipc_server.py  paths.py  polling.py  secrets.py  setup_wizard.py
docs/porting/: hal-contract.md
feature-documentation/: windows-daemon.md
firmware/: platformio.ini
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  Clawdmeter-callflow.html  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
tools/: README.md  build_daemon_bundle.py  build_fonts.py  build_wine_logo.py  convert_to_c.js  copy_firmware_to_companion.py  diag_langdock.py  install_release_deps.sh  pixellab_to_claudepix.py  release-companion.sh
(+59 files in other folders)
