[package]
name = "clawdmeter-companion"
version = "0.1.0"
edition = "2021"
description = "Clawdmeter Companion-App"
authors = ["Sascha Krinke"]
license = "MIT"
publish = false

[lib]
name = "clawdmeter_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
serialport = "4.5"
espflash = "3.2"
btleplug = "0.11"
futures = "0.3"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "5"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
# nothing macOS-specific yet — service-Plist wird zur Laufzeit gerendert

[target."cfg(target_os = \"windows\")".dependencies]
# Named-Pipe-ACLs ggf. später über windows-sys

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
